# waft

./: .gitignore  CMakeLists.txt  README.md
src/: Tests.cpp  Tests.h  main.cpp
src/model/: Ellipse.cpp  Ellipse.h  Sample.cpp  Sample.h  Samples.cpp  Samples.h
src/model/samples/: Files.cpp  Files.h  SavedAnnotations.cpp  SavedAnnotations.h
src/view/: AnnotationPage.cpp  AnnotationPage.h  AnnotationWidget.cpp  AnnotationWidget.h  InputPage.cpp  InputPage.h  InputWidget.cpp  InputWidget.h  OutputPage.cpp  OutputPage.h  Wizard.cpp  Wizard.h
src/view/inputs/: Images.cpp  Images.h  Input.h  MultiInput.cpp  MultiInput.h  Tsv.cpp  Tsv.h
src/view/util/: AspectRatioPixmapLabel.cpp  AspectRatioPixmapLabel.h  AspectRatioWidget.cpp  AspectRatioWidget.h  FileList.cpp  FileList.h  FileSelector.cpp  FileSelector.h
